this is for nav bar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
 </head>
 <body>
     <!-- header start -->
-    <header>
-
+    <header class="nab-item">
+        <div class="nav-items">
+            <div class="logo-name">
+                <i class="fas fa-biohazard fav-danger"></i>
+                Danger section 
+            </div>
+            <div class="about-sec">
+                <a href="">About</a>
+                <a href="">Home</a>
+                <a href="">Works</a>
+                <img src="images/tan.jpg" alt="">
+            </div>
+        </div>
     </header>
     <!-- header end -->
     <main>
